--- a/docs/gettingstarted/quickoverview.ipynb
+++ b/docs/gettingstarted/quickoverview.ipynb
@@ -84,7 +84,7 @@
        "\t\tType of data in file. Can be numerical, analytical or experimental.\n",
        "    * \u001b[1mcontact\u001b[0m:\n",
        "\t\tContact or responsible person for the full file. Contact is represented by an ORCID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000025056FA7430>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000024EB1560280>):\n",
        "\t\tThe standard name table of the convention.\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tComment describes the file content in more detail.\n",
@@ -347,8 +347,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--12248152700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--12248152700\">\n",
+       "                        <input id=\"group-ds--5049128800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5049128800\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -376,7 +376,7 @@
    "id": "efa06687-c9c0-4a20-af30-91f337fb09d5",
    "metadata": {},
    "source": [
-    "##### Now, we enable the convention ..."
+    "**Now, we enable the convention ...**"
    ]
   },
   {
@@ -474,7 +474,7 @@
    "id": "4228862d-8150-40fb-af60-0d46625dcada",
    "metadata": {},
    "source": [
-    "## Datasets/xarray interface\n",
+    "### Datasets/xarray interface\n",
     "\n",
     "With the `h5rdmtoolbox` you receive a `xr.DataArray` object instead of a `np.ndarray` when an HDF5 dataset is sliced. Thus, meta information (the attributes of the dataset) is still provided with the data and useful features like plotting is possible.\n",
     "\n",
@@ -890,20 +890,20 @@
        "Attributes:\n",
        "    long_name:         air velocity in pipe\n",
        "    units:             m/s\n",
-       "    HDF_SRC_FILENAME:  {&#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdm...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'vel'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 21</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-06628fd6-e29b-4976-b781-dba83fb5015e' class='xr-array-in' type='checkbox' ><label for='section-06628fd6-e29b-4976-b781-dba83fb5015e' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.6745 0.9959 0.7962 0.1797 ... 0.01737 0.6872 0.9973 0.7855</span></div><div class='xr-array-data'><pre>array([ 0.        ,  0.6744506 ,  0.9959207 ,  0.7961657 ,  0.17972937,\n",
+       "    HDF_SRC_FILENAME:  {&#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdm...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'vel'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 21</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-4c4c6ff8-5df7-4ad1-821e-da82efa5d7c7' class='xr-array-in' type='checkbox' ><label for='section-4c4c6ff8-5df7-4ad1-821e-da82efa5d7c7' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.6745 0.9959 0.7962 0.1797 ... 0.01737 0.6872 0.9973 0.7855</span></div><div class='xr-array-data'><pre>array([ 0.        ,  0.6744506 ,  0.9959207 ,  0.7961657 ,  0.17972937,\n",
        "       -0.53077013, -0.96348575, -0.89195141, -0.35360535,  0.36980363,\n",
        "        0.89967217,  0.95868823,  0.51596517, -0.19679344, -0.80655823,\n",
        "       -0.99420266, -0.66152114,  0.01737412,  0.68717646,  0.99733809,\n",
-       "        0.78553281])</pre></div></div></li><li class='xr-section-item'><input id='section-c62c4ddf-aaed-467f-b598-4f7bb29d0ff8' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c62c4ddf-aaed-467f-b598-4f7bb29d0ff8' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 0.03927 ... 0.7461 0.7854</div><input id='attrs-cd5512ef-7241-47a3-87a2-9b53a06fcd69' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-cd5512ef-7241-47a3-87a2-9b53a06fcd69' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2867cc90-5ec8-4ec0-8f00-61d4019e7e02' class='xr-var-data-in' type='checkbox'><label for='data-2867cc90-5ec8-4ec0-8f00-61d4019e7e02' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>measurement time</dd><dt><span>units :</span></dt><dd>s</dd></dl></div><div class='xr-var-data'><pre>array([0.      , 0.03927 , 0.07854 , 0.11781 , 0.15708 , 0.19635 , 0.235619,\n",
+       "        0.78553281])</pre></div></div></li><li class='xr-section-item'><input id='section-fe865d07-9091-432d-a0c0-f66d07018bda' class='xr-section-summary-in' type='checkbox'  checked><label for='section-fe865d07-9091-432d-a0c0-f66d07018bda' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 0.03927 ... 0.7461 0.7854</div><input id='attrs-f44797fe-cf67-4bb6-95f3-6fac62e20263' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-f44797fe-cf67-4bb6-95f3-6fac62e20263' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-08e33a5b-4490-4c81-9486-b54224a9f8dc' class='xr-var-data-in' type='checkbox'><label for='data-08e33a5b-4490-4c81-9486-b54224a9f8dc' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>measurement time</dd><dt><span>units :</span></dt><dd>s</dd></dl></div><div class='xr-var-data'><pre>array([0.      , 0.03927 , 0.07854 , 0.11781 , 0.15708 , 0.19635 , 0.235619,\n",
        "       0.274889, 0.314159, 0.353429, 0.392699, 0.431969, 0.471239, 0.510509,\n",
-       "       0.549779, 0.589049, 0.628319, 0.667588, 0.706858, 0.746128, 0.785398])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7444f6b0-0a6d-4dd6-ac50-fb0d4d93bc58' class='xr-section-summary-in' type='checkbox'  ><label for='section-7444f6b0-0a6d-4dd6-ac50-fb0d4d93bc58' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-30d04840-f3ce-4b70-8431-bd1db81252ab' class='xr-index-data-in' type='checkbox'/><label for='index-30d04840-f3ce-4b70-8431-bd1db81252ab' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([                 0.0, 0.039269908169872414,  0.07853981633974483,\n",
+       "       0.549779, 0.589049, 0.628319, 0.667588, 0.706858, 0.746128, 0.785398])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-334324b6-cb80-4725-ae3a-f39b0a93b7e6' class='xr-section-summary-in' type='checkbox'  ><label for='section-334324b6-cb80-4725-ae3a-f39b0a93b7e6' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-6e25f2fa-799e-4b7d-87ea-bb181c5df012' class='xr-index-data-in' type='checkbox'/><label for='index-6e25f2fa-799e-4b7d-87ea-bb181c5df012' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([                 0.0, 0.039269908169872414,  0.07853981633974483,\n",
        "        0.11780972450961724,  0.15707963267948966,  0.19634954084936207,\n",
        "        0.23561944901923448,   0.2748893571891069,   0.3141592653589793,\n",
        "         0.3534291735288517,  0.39269908169872414,  0.43196898986859655,\n",
        "        0.47123889803846897,   0.5105088062083414,   0.5497787143782138,\n",
        "         0.5890486225480862,   0.6283185307179586,    0.667588438887831,\n",
        "         0.7068583470577035,   0.7461282552275759,   0.7853981633974483],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;time&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-4af73d79-c8c2-435e-9632-f190f8c32f10' class='xr-section-summary-in' type='checkbox'  checked><label for='section-4af73d79-c8c2-435e-9632-f190f8c32f10' class='xr-section-summary' >Attributes: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>air velocity in pipe</dd><dt><span>units :</span></dt><dd>m/s</dd><dt><span>HDF_SRC_FILENAME :</span></dt><dd>{&#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp_0\\\\tmp3.hdf&#x27;, &#x27;name&#x27;: &#x27;/vel&#x27;}</dd></dl></div></li></ul></div></div>"
+       "      dtype=&#x27;float64&#x27;, name=&#x27;time&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-a0f19094-5b5a-40bc-beb9-1903a5b4fd05' class='xr-section-summary-in' type='checkbox'  checked><label for='section-a0f19094-5b5a-40bc-beb9-1903a5b4fd05' class='xr-section-summary' >Attributes: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>air velocity in pipe</dd><dt><span>units :</span></dt><dd>m/s</dd><dt><span>HDF_SRC_FILENAME :</span></dt><dd>{&#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp_0\\\\tmp3.hdf&#x27;, &#x27;name&#x27;: &#x27;/vel&#x27;}</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'vel' (time: 21)>\n",
@@ -944,8 +944,8 @@
    "id": "1627e47a-37d1-45b2-8adc-d04d038b1574",
    "metadata": {},
    "source": [
-    "## Natural Naming\n",
-    "Until here we used the conventional way of addressing variables and groups in a dictionary-like style. `h5RDMtoolbox` allows using \"natural naming\" which means that we can address those objects as if they were attributes. Make sure `h5tbx.config.natural_naming` is set to `True` (the default)"
+    "### Natural Naming\n",
+    "Until here, we used the conventional way of addressing variables and groups in a dictionary-like style. `h5RDMtoolbox` allows using \"natural naming\" which means that we can address those objects as if they were attributes. Make sure `h5tbx.config.natural_naming` is set to `True` (the default)"
    ]
   },
   {
@@ -1224,25 +1224,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--14569283800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--14569283800\">\n",
+       "                        <input id=\"group-ds--7489522500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7489522500\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li><li style=\"list-style-type: none; font-style: italic\">contact : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/time-14571698800\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/time-14571703600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/time-14571703600\">time</label>\n",
+       "                <ul id=\"ds-1-/time-7492272900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/time-7492275900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/time-7492275900\">time</label>\n",
        "                    <span class=\"h5tb-dims\">(21) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : measurement time</li><li style=\"list-style-type: none; font-style: italic\">units : s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/vel-14572737700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/vel-14572740700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/vel-14572740700\">vel</label>\n",
+       "                <ul id=\"ds-1-/vel-7493164400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/vel-7493166700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/vel-7493166700\">vel</label>\n",
        "                    <span class=\"h5tb-dims\">(time: 21) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : air velocity in pipe</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
@@ -1299,7 +1299,7 @@
    "id": "54b88c46-3640-46fa-86f1-4a2b92fef688",
    "metadata": {},
    "source": [
-    "### Layouts\n",
+    "## Layouts\n",
     "\n",
     "Layouts define how a file is expected to be organized, which groups and datasets must exist, which attributes are expected and much more. Layout define expectations and thus help file exchange where multiple users are involved. E.g. for numerical and experimental data, layouts are defined such that the minimum data will exist. If a layout validation exists, the exchanged file is rejected."
    ]
