--- a/docs/howto/ht004.ipynb
+++ b/docs/howto/ht004.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "791af21d-0c99-4d0b-bb0b-b5f59ecb1c8c",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"maximum_of\" is not a registered component. Available components are: ['x', 'y', 'z']\n"
+      "\"maximum_of_pressure\" not found in Standard Name Table \"Test\".\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
     "# check if the problem really exists:\n",
     "try:\n",
     "    snt['maximum_of_pressure']\n",
-    "except h5tbx.errors.AffixKeyError as e:\n",
+    "except h5tbx.errors.StandardNameError as e:\n",
     "    print(e)"
    ]
   },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dc0db89c-c3b9-4c41-87dc-6a5ae91fc356",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e10d2b65-b6ea-42ce-909d-a375a0ba71ed",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "9f9d5fa2-9dfa-46ff-bc9b-8b9db8f5870a",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,17 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "f54490f6-0272-4483-86f2-71fba12207c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<re.Match object; span=(0, 26), match='maximum_of_static_pressure'>"
+       "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a5ae8c3a-3115-400f-bd02-3d75578c707a",
    "metadata": {},
    "outputs": [],
@@ -161,17 +161,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "835d7ccb-afca-429a-a5f1-38b8a18e4230",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "    <li>\n",
+       "        <input id=\"group-maximum_of_static_pressure22629808100\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-maximum_of_static_pressure22629808100\">\n",
+       "        maximum_of_static_pressure</label>\n",
+       "        <ul class=\"h5tb-attr-list\">\n",
+       "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Maximum of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
+       "    </ul>\n",
+       "</ul>"
+      ],
       "text/plain": [
        "<StandardName: \"maximum_of_static_pressure\" [Pa] Maximum of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "ccc894ff-2748-4e1b-9677-5b37d0b7d792",
    "metadata": {},
    "outputs": [
@@ -192,7 +203,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
