--- a/docs/howto/ht001.ipynb
+++ b/docs/howto/ht001.ipynb
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox._cfg.set_config at 0x1797c1d3a90>"
+       "<h5rdmtoolbox._cfg.set_config at 0x1c02609a9d0>"
       ]
      },
      "execution_count": 3,
