--- a/docs/conventions/standard_attributes_and_conventions.ipynb
+++ b/docs/conventions/standard_attributes_and_conventions.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "2e3d59ca-8de0-4821-bdb7-27a99b259b8d",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
        "\t\tType of data in file. Can be numerical or experimental."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "8dfd1a89-ba4d-4333-bed4-dbd9dae8fadd",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "using(\"h5rdmtoolbox-tuturial-convention\")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "bc760582-760d-45dc-ae88-8346d3cfb387",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "105511eb-f632-471a-b53c-7945440da8f4",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "0669ccff-9563-4a0c-ab66-e07224f8d42b",
    "metadata": {},
    "outputs": [
@@ -426,12 +426,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--43992523200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--43992523200\">\n",
+       "                        <input id=\"group-ds--4924052700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4924052700\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li><li style=\"list-style-type: none; font-style: italic\">data_type : numerical</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc2</li><li style=\"list-style-type: none; font-style: italic\">data_type : numerical</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "599c91e0-fded-4cf7-9706-d5dbf1eddb65",
    "metadata": {},
    "outputs": [],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "a709898e-5bac-4773-8dac-500210c962ba",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "\t\tType of data in file. Can be numerical or experimental."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "cdfebdc5-3cd1-41c6-a370-ae1b884d9960",
    "metadata": {},
    "outputs": [
@@ -716,12 +716,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--45444047200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--45444047200\">\n",
+       "                        <input id=\"group-ds--4970560900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4970560900\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc2</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "79efb889-ff4c-4b8e-99a9-782d3bd4a4f5",
    "metadata": {},
    "outputs": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "73415654-05b1-4d85-a8f5-51398fdd7b93",
    "metadata": {},
    "outputs": [],
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "b37888a9-c963-420a-b40b-45495212721b",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
        "dict_keys(['$none', '$datetime', '$type', '$in', '$orcid', '$quantity', '$units', '$ref', '$url', '$bibtex', '$minlength', '$maxlength', '$regex', '$standard_name', '$standard_name_table'])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,28 +823,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "0641aa3c-152f-4f78-81b3-c6ddf4e9e531",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "No record found for DOI: 10.5281/zenodo.8281285",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cv \u001b[38;5;241m=\u001b[39m \u001b[43mh5tbx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconventions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_zenodo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoi\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m8281285\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m cv\n",
-      "File \u001b[1;32m~\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\core.py:431\u001b[0m, in \u001b[0;36mfrom_zenodo\u001b[1;34m(doi, name, register)\u001b[0m\n\u001b[0;32m    429\u001b[0m     filename \u001b[38;5;241m=\u001b[39m UserDir[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcache\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m/\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdoi\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    430\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mexists():\n\u001b[1;32m--> 431\u001b[0m     record \u001b[38;5;241m=\u001b[39m \u001b[43mzsearch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch_doi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    432\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    433\u001b[0m         matches \u001b[38;5;241m=\u001b[39m [file \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m record\u001b[38;5;241m.\u001b[39mfiles \u001b[38;5;28;01mif\u001b[39;00m file[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124myaml\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "File \u001b[1;32m~\\Anaconda3\\envs\\h5tbx\\lib\\site-packages\\zenodo_search\\zsearch.py:147\u001b[0m, in \u001b[0;36msearch_doi\u001b[1;34m(doi)\u001b[0m\n\u001b[0;32m    145\u001b[0m r \u001b[38;5;241m=\u001b[39m search(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdoi:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdoi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    146\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(r) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m--> 147\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo record found for DOI: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdoi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    148\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(r) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m    149\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m r[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[1;31mValueError\u001b[0m: No record found for DOI: 10.5281/zenodo.8281285"
-     ]
+     "data": {
+      "text/plain": [
+       "\u001b[1mConvention(\"h5rdmtoolbox-tutorial-convention\")\u001b[0m\n",
+       "contact: https://orcid.org/0000-0001-8729-0482\n",
+       "  File.__init__():\n",
+       "    * \u001b[1mdata_type\u001b[0m:\n",
+       "\t\tType of data in file. Can be numerical, analytical or experimental.\n",
+       "    * \u001b[1mcontact\u001b[0m:\n",
+       "\t\tContact or responsible person for the full file. Contact is represented by an ORCID.\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000002A75149B730>):\n",
+       "\t\tThe standard name table of the convention.\n",
+       "    * \u001b[3mcomment\u001b[0m (default=None):\n",
+       "\t\tComment describes the file content in more detail.\n",
+       "    * \u001b[3mreferences\u001b[0m (default=None):\n",
+       "\t\tWeb resources servering as references for the full file.\n",
+       "  Group.create_dataset():\n",
+       "    * \u001b[1munits\u001b[0m:\n",
+       "\t\tThe physical unit of the dataset. If dimensionless, the unit is ''.\n",
+       "    * \u001b[1mstandard_name\u001b[0m:\n",
+       "\t\tStandard name of the dataset. If not set, the long_name attribute must be given.\n",
+       "    * \u001b[1mlong_name\u001b[0m:\n",
+       "\t\tAn comprehensive description of the dataset. If not set, the standard_name attribute must be given.\n",
+       "    * \u001b[3mcomment\u001b[0m (default=None):\n",
+       "\t\tComment describes the dataset in more detail.\n",
+       "    * \u001b[3mreferencesdataset\u001b[0m (default=None):\n",
+       "\t\tWeb resources servering as references for the dataset.\n",
+       "  Group.create_group():\n",
+       "    * \u001b[3mcomment\u001b[0m (default=None):\n",
+       "\t\tComment describes the group content in more detail.\n",
+       "    * \u001b[3mreferences\u001b[0m (default=None):\n",
+       "\t\tWeb resources servering as references for the group."
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "cv = h5tbx.conventions.from_zenodo(doi=8281285)\n",
+    "cv = h5tbx.conventions.from_zenodo(doi=8301535)\n",
     "cv"
    ]
   },
@@ -860,20 +885,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "bff929ab-d133-48bd-8c16-b7bd3080a426",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<StandardAttribute[positional](\"standard_name\"): \"Standard name of the dataset. If not set, the long_name attribute must be given.\">"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cv.properties[h5tbx.Dataset]['standard_name']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7f2295ae-7b1f-431f-8168-cf340b80adc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no convention: \n",
+      "\n",
+      "Parameters for \"__init__\":\n",
+      "  - name\n",
+      "  - mode\n",
+      "  - layout\n",
+      "  - attrs\n",
+      "  - kwargs\n",
+      "\n",
+      "------------\n",
+      "with convention h5rdmtoolbox-tutorial-convention: (standard attributes are made bold)\n",
+      "\n",
+      "Parameters for \"__init__\":\n",
+      "  - name\n",
+      "  - mode\n",
+      "  - layout\n",
+      "  - attrs\n",
+      "  - \u001b[1mdata_type\u001b[0m\n",
+      "  - \u001b[1mstandard_name_table\u001b[0m\n",
+      "  - \u001b[1mcomment\u001b[0m\n",
+      "  - \u001b[1mcontact\u001b[0m\n",
+      "  - \u001b[1mreferences\u001b[0m\n",
+      "  - kwargs\n"
+     ]
+    }
+   ],
    "source": [
     "import inspect\n",
     "\n",
